fix: fixes before deploy

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,7 @@ POSTGRES_DB="наименование базы данных"
 POSTGRES_PORT="порт базы данных"
 POSTGRES_USER="юзернайм в базе данных"
 POSTGRES_PASSWORD="пароль от базы данных"
+POSTGRES_DATA='директория для хранения бд'
+FRONTEND_PORT="порт фронта"
 BACKEND_PORT="порт бэка"
+NGINX_PORT="порт nginx"
